--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
+    "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
+        "wait.h": "c",
+        "stdlib.h": "c",
+        "string.h": "c",
+        "unistd.h": "c",
+        "stdio.h": "c",
         "fcntl.h": "c"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+    }
 }
